--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
   
     <div>
-        <img class="rwandaful-img" src="img/Desktop.jpg" alt="">
+        <img class="rwandaful-img" src="img/Employee Desktop.jpg" alt="">
     </div>
     <div>
-        <img class="rwandaful-img767" src="img/Mobile.jpg" alt="">
+        <img class="rwandaful-img767" src="img/Employee Tablet.jpg" alt="">
     </div>
 
 
